--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,12 @@
 runtime: python27
 api_version: 1
-threadsafe: true
+threadsafe: false
 
 handlers:
-- url: /.*
+- url: /front
+  static_dir: front
+
+- url: .*
   script: main.app
 
 libraries:
